# coolviz

./: .gitignore  Cargo.toml  LICENSE  NOTICE.md  README.md
assets/: wind_snapshot.grib2  wind_snapshot_cycle.txt
src/: astro.rs  camera.rs  main.rs
src/data/: coast.rs  himawari.rs  landmask.rs  mod.rs  plateau.rs  quakes.rs  rain.rs  roads.rs  sats.rs  terrain.rs  wind.rs
src/scene/: coast.rs  globe.rs  mod.rs  ocean.rs  particles.rs  post.rs  sprites.rs  swe.rs  tokyo.rs
src/shaders/: city.wgsl  citylights.wgsl  coast.wgsl  globe.wgsl  ocean.wgsl  particles.wgsl  post.wgsl  quakes.wgsl  rain.wgsl  sats.wgsl  swe.wgsl  trails.wgsl
